# pather

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/pather/: constants.py  pather.py
tests/: test_pather.py
